welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:14: error: reassignment to val
	if(a = b) {
             ^close10:14: error: type mismatch;
 found   : Unit
 required: Int
	if(a = b) {
        ^